Fix footer on mobile

--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -68,12 +68,42 @@ footer {
     & section.site-links {
       display: grid !important;
       list-style-type: none;
-      grid-template-columns: subgrid;
-      grid-template-rows: 1fr;
-      grid-column: footer;
-      text-align: center;
+      grid-column: 1/4;
+      text-align: left;
       margin-block-start: var(--size-5);
     }
+
+    & section.social-links {
+      display: grid !important;
+      list-style-type: none;
+      grid-column: 5/9;
+      text-align: right;
+      justify-items: right;
+      margin-block-start: var(--size-5);
+    }
+
+    @media (width >= 500px) {
+      & section.site-links {
+        display: grid !important;
+        list-style-type: none;
+        grid-template-columns: subgrid;
+        grid-template-rows: 1fr;
+        grid-column: 1/4;
+        text-align: center;
+        margin-block-start: var(--size-5);
+      }
+
+      & section.social-links {
+        display: grid !important;
+        grid-template-columns: subgrid;
+        grid-template-rows: 1fr;
+        grid-column: 6/9;
+        justify-items: center;
+        margin-block-start: var(--size-5);
+
+      }
+    }
+
   }
 }
 
@@ -300,13 +330,6 @@ blockquote::before {
 .publish-date {
   color: var(--gray-7);
   font-size: .825rem;
-}
-
-.social-links {
-  text-decoration: none;
-  padding-left: 0;
-  display: flex;
-  flex-direction: row;
 }
 
 .bottom-links {
